fix: Netlify function runtime errors (ENOENT, TypeError)

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,7 @@
     "@babel/preset-typescript",
     "lightningcss"
   ]
+  included_files = ["client/src/data/projects.json"]
 
 [[redirects]]
   from = "/*"
